# test_task

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-compose-actions-workflow.yml
app/: Dockerfile  app.py  requirements.txt
app/templates/: flats.html
sreality_scraper/: Dockerfile  requirements.txt
sreality_scraper/sreality_scraper/: flats.json  items.py  pipelines.py  settings.py
sreality_scraper/sreality_scraper/spiders/: flats_spider.py
